--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ env/
 
 # Trained model (regenerate with train.py)
 data.pth
+server/legacy/data.pth
+
+# Database
+instance/
 
 # IDE
 .vscode/
@@ -27,3 +31,7 @@ Thumbs.db
 # Misc
 *.log
 .env
+
+# Node / React
+client/node_modules/
+client/dist/
