--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-text-style": "^3.19.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
+    "@xyflow/react": "^12.10.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
