--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-flask>=3.0
-flask-sqlalchemy>=3.1
-requests>=2.31
+fastapi>=0.110
+uvicorn[standard]>=0.27
+sqlalchemy[asyncio]>=2.0
+asyncpg>=0.29
+alembic>=1.13
+psycopg2-binary>=2.9
+python-jose[cryptography]>=3.3
+passlib[bcrypt]>=1.7
+python-dotenv>=1.0
+httpx>=0.27
+pydantic-settings>=2.1
 torch>=2.0
 nltk>=3.8
