added to canvas page

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
     "@xyflow/react": "^12.10.0",
+    "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-big-calendar": "^1.19.4",
